- Added : Configuration options to turn on or off and configure the Multilanguage on the site (malanciault)
- Added : Integrating some flags image to be used by the multilanguage feature (malanicault)
- Added : Handling 404 and 500 pages automatically on the site (malanciault)

- Improved: When the User registration is Off... all links to register.php are not shown.

Working Changes : (Changes to be reverted or made definitive)

- Commented a line in common.php ... someone can tell for what is this line? (young-pee)
- Security Audit: making sure that header & redirect_header are followed with exit(); (protection from telnet vulnerability aswell as other instances where the page is viewed with a system that does not understand the 'header' function, it would skip the redirection page and continue displaying the rest of page. (Vaughan)

========================
Unreleased: XOOPS 2.0.18
========================

- improved : html and css installer (dugris)
- fixed #1824377 : _MA_USER_SENDMAIL not defined (Garrath/dugris)
- fixed #1540480 : $modversion constant language truncated (zoullou/dugris)
- Fixed #1779344 : City renamed (young-pee)
- Fixed #1333337 : Grp memberships lost when usr w. no Group perm edits usr act (jegelstaff/dugris)
- Fixed #1821846 : mistake on RpcDateTimeHandle (Garrath/dugris)
- improved : include multiple language files (DuGris)
- Fixed : themes, Cascading - add themes screenshot (kris_fr/DuGris)
- Fixed bug #1415777 : xml feed is not working when debug mode is activated (DuGris)
- Fixed : Do not display the comment form if the option module "Allow anonymous post in comments?" is disabled (dugris)
- Fixed bug #1808484 : Check modules permissions before displaying "Recent comments blocks" (herve/dugris)
- Fixed #1782185 : Adding new parameters (width, height, max file size) for uploading ranks (dugris)
- Default theme corrected : xhtml transitional 1.0, css 1/2/3 (kris_fr)
- improved : xhtml/css compliance /banners.php (kris_fr)