@@ -1,4 +1,4 @@
-<table width="100%" cellspacing="1" class="outer">
+<table width="100%" cellspacing="1px" class="outer">
   <{foreach item=comment from=$block.comments}>
   <tr class="<{cycle values="even,odd"}>">
     <td align="center"><img src="<{$xoops_url}>/images/subject/<{$comment.icon}>" alt="" /></td>
