@@ -9,9 +9,9 @@
     <input type="submit" value="<{$block.lang_login}>" /><br />
     <{$block.sslloginlink}>
 </form>
-<a href="<{$xoops_url}>/user.php#lost"><{$block.lang_lostpass}></a>
+<a href="<{$xoops_url}>/user.php#lost" title="<{$block.lang_lostpass}>"><{$block.lang_lostpass}></a>
 
 <{if $block.registration }>
 <br /><br />
-<a href="<{$xoops_url}>/register.php"><{$block.lang_registernow}></a>
+<a href="<{$xoops_url}>/register.php" title="<{$block.lang_registernow}>"><{$block.lang_registernow}></a>
 <{/if}>
