@@ -1,12 +1,12 @@
 <table cellspacing="0">
   <tr>
     <td id="mainmenu">
-      <a class="menuTop" href="<{$xoops_url}>/"><{$block.lang_home}></a>
+      <a class="menuTop<{if $xoops_dirname=='system'}> actlink<{/if}>" href="<{$xoops_url}>/" title="<{$block.lang_home}>"><{$block.lang_home}></a>
       <!-- start module menu loop -->
       <{foreach item=module from=$block.modules}>
-      <a class="menuMain" href="<{$xoops_url}>/modules/<{$module.directory}>/"><{$module.name}></a>
+      <a class="menuMain<{if $xoops_dirname==$module.directory}> actlink<{/if}>" href="<{$xoops_url}>/modules/<{$module.directory}>/" title="<{$module.name}>"><{$module.name}></a>
         <{foreach item=sublink from=$module.sublinks}>
-          <a class="menuSub" href="<{$sublink.url}>"><{$sublink.name}></a>
+          <a class="menuSub" href="<{$sublink.url}>" title="<{$sublink.name}>"><{$sublink.name}></a>
         <{/foreach}>
       <{/foreach}>
       <!-- end module menu loop -->
