@@ -1,4 +1,4 @@
 <form style="margin-top: 0px;" action="<{$xoops_url}>/search.php" method="get">
   <input type="text" name="query" size="14" /><input type="hidden" name="action" value="results" /><br /><input type="submit" value="<{$block.lang_search}>" />
 </form>
-<a href="<{$xoops_url}>/search.php"><{$block.lang_advsearch}></a>
+<a href="<{$xoops_url}>/search.php" title="<{$block.lang_advsearch}>"><{$block.lang_advsearch}></a>
