@@ -1,7 +1,5 @@
-<table class="outer" cellspacing="0">
-
   <{if $block.showgroups == true}>
-
+    <table class="outer" cellspacing="0">
   <!-- start group loop -->
   <{foreach item=group from=$block.groups}>
   <tr>
@@ -11,18 +9,17 @@
   <!-- start group member loop -->
   <{foreach item=user from=$group.users}>
   <tr>
-    <td class="even" valign="middle" align="center"><img src="<{$user.avatar}>" alt="" width="32" /><br /><a href="<{$xoops_url}>/userinfo.php?uid=<{$user.id}>"><{$user.name}></a></td><td class="odd" width="20%" align="right" valign="middle"><{$user.msglink}></td>
+    <td class="even" valign="middle" align="center"><img src="<{$user.avatar}>" alt="<{$user.name}>'s avatar" width="32px" /><br /><a href="<{$xoops_url}>/userinfo.php?uid=<{$user.id}>" title="<{$user.name}>"><{$user.name}></a></td><td class="odd" width="20%" align="right" valign="middle"><{$user.msglink}></td>
   </tr>
   <{/foreach}>
   <!-- end group member loop -->
 
   <{/foreach}>
   <!-- end group loop -->
-  <{/if}>
 </table>
-
+<{/if}>
 <br />
 
 <div style="margin: 3px; text-align:center;">
-  <img src="<{$block.logourl}>" alt="" border="0" /><br /><{$block.recommendlink}>
+  <img src="<{$block.logourl}>" alt="<{$xoops_sitename}>" border="0" /><br /><{$block.recommendlink}>
 </div>
