@@ -1,12 +1,12 @@
-<table cellspacing="1" class="outer">
+<table cellspacing="1px" class="outer">
   <{foreach item=user from=$block.users}>
   <tr class="<{cycle values="even,odd"}>" valign="middle">
     <td><{$user.rank}></td>
     <td align="center">
       <{if $user.avatar != ""}>
-      <img src="<{$user.avatar}>" alt="" width="32" /><br />
+      <img src="<{$user.avatar}>" alt="<{$user.name}>'s avatar" width="32px" /><br />
       <{/if}>
-      <a href="<{$xoops_url}>/userinfo.php?uid=<{$user.id}>"><{$user.name}></a>
+      <a href="<{$xoops_url}>/userinfo.php?uid=<{$user.id}>" title="<{$user.name}>"><{$user.name}></a>
     </td>
     <td align="center"><{$user.posts}></td>
   </tr>
