@@ -2,19 +2,19 @@
   <tr>
     <td id="usermenu">
       <{if $xoops_isadmin}>
-        <a class="menuTop" href="<{$xoops_url}>/admin.php"><{$block.lang_adminmenu}></a>
-	    <a href="<{$xoops_url}>/user.php"><{$block.lang_youraccount}></a>
+        <a class="menuTop" href="<{$xoops_url}>/admin.php" title="<{$block.lang_adminmenu}>"><{$block.lang_adminmenu}></a>
+	    <a href="<{$xoops_url}>/user.php" title="<{$block.lang_youraccount}>"><{$block.lang_youraccount}></a>
       <{else}>
-		<a class="menuTop" href="<{$xoops_url}>/user.php"><{$block.lang_youraccount}></a>
+		<a class="menuTop" href="<{$xoops_url}>/user.php"title="<{$block.lang_youraccount}>"><{$block.lang_youraccount}></a>
       <{/if}>
-      <a href="<{$xoops_url}>/edituser.php"><{$block.lang_editaccount}></a>
-      <a href="<{$xoops_url}>/notifications.php"><{$block.lang_notifications}></a>
+      <a href="<{$xoops_url}>/edituser.php" title="<{$block.lang_editaccount}>"><{$block.lang_editaccount}></a>
+      <a href="<{$xoops_url}>/notifications.php" title="<{$block.lang_notifications}>"><{$block.lang_notifications}></a>
       <{if $block.new_messages > 0}>
-        <a class="highlight" href="<{$xoops_url}>/viewpmsg.php"><{$block.lang_inbox}> (<span style="color:#ff0000; font-weight: bold;"><{$block.new_messages}></span>)</a>
+        <a class="highlight" href="<{$xoops_url}>/viewpmsg.php" title="<{$block.lang_inbox}>"><{$block.lang_inbox}> (<span style="color:#ff0000; font-weight: bold;"><{$block.new_messages}></span>)</a>
       <{else}>
-        <a href="<{$xoops_url}>/viewpmsg.php"><{$block.lang_inbox}></a>
+        <a href="<{$xoops_url}>/viewpmsg.php" title="<{$block.lang_inbox}>"><{$block.lang_inbox}></a>
       <{/if}>
-      <a href="<{$xoops_url}>/user.php?op=logout"><{$block.lang_logout}></a>
+      <a href="<{$xoops_url}>/user.php?op=logout" title="<{$block.lang_logout}>"><{$block.lang_logout}></a>
     </td>
   </tr>
 </table>
