@@ -1,4 +1,4 @@
-<table class="outer" cellpadding="5" cellspacing="1">
+<table class="outer" cellpadding="5px" cellspacing="1px">
   <tr>
     <th width="20%"><{$lang_poster}></th>
     <th><{$lang_thread}></th>
