@@ -1,6 +1,6 @@
 <{section name=i loop=$comments}>
 <br />
-<table cellspacing="1" class="outer">
+<table cellspacing="1px" class="outer">
   <tr>
     <th width="20%"><{$lang_poster}></th>
     <th><{$lang_thread}></th>
@@ -15,7 +15,7 @@
   <tr>
     <td width="<{$reply.prefix}>"></td>
     <td>
-      <table class="outer" cellspacing="1">
+      <table class="outer" cellspacing="1px">
         <tr>
           <th width="20%"><{$lang_poster}></th>
           <th><{$lang_thread}></th>
