@@ -1,6 +1,6 @@
 <{section name=i loop=$comments}>
 <br />
-<table cellspacing="1" class="outer">
+<table cellspacing="1px" class="outer">
   <tr>
     <th width="20%"><{$lang_poster}></th>
     <th><{$lang_thread}></th>
@@ -10,14 +10,14 @@
 
 <{if $show_threadnav == true}>
 <div style="text-align:left; margin:3px; padding: 5px;">
-<a href="<{$comment_url}>"><{$lang_top}></a> | <a href="<{$comment_url}>&amp;com_id=<{$comments[i].pid}>&amp;com_rootid=<{$comments[i].rootid}>#newscomment<{$comments[i].pid}>"><{$lang_parent}></a>
+<a href="<{$comment_url}>" title="<{$lang_top}>"><{$lang_top}></a> | <a href="<{$comment_url}>&amp;com_id=<{$comments[i].pid}>&amp;com_rootid=<{$comments[i].rootid}>#newscomment<{$comments[i].pid}>" title="<{$lang_parent}>"><{$lang_parent}></a>
 </div>
 <{/if}>
 
 <{if $comments[i].show_replies == true}>
 <!-- start comment tree -->
 <br />
-<table cellspacing="1" class="outer">
+<table cellspacing="1px" class="outer">
   <tr>
     <th width="50%"><{$lang_subject}></th>
     <th width="20%" align="center"><{$lang_poster}></th>
@@ -25,7 +25,7 @@
   </tr>
   <{foreach item=reply from=$comments[i].replies}>
   <tr>
-    <td class="even"><{$reply.prefix}> <a href="<{$comment_url}>&amp;com_id=<{$reply.id}>&amp;com_rootid=<{$reply.root_id}>"><{$reply.title}></a></td>
+    <td class="even"><{$reply.prefix}> <a href="<{$comment_url}>&amp;com_id=<{$reply.id}>&amp;com_rootid=<{$reply.root_id}>" title=<{$reply.title}>"><{$reply.title}></a></td>
     <td class="odd" align="center"><{$reply.poster.uname}></td>
     <td class="even" align="right"><{$reply.date_posted}></td>
   </tr>
