@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<{$xoops_langcode}>" lang="<{$xoops_langcode}>">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=<{$xoops_charset}>" />
 <meta http-equiv="Refresh" content="<{$time}>; url=<{$url}>" />
@@ -6,7 +7,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="<{$xoops_themecss}>" />
 </head>
 <body>
-<div style="text-align:center; background-color: #EBEBEB; border-top: 1px solid #FFFFFF; border-left: 1px solid #FFFFFF; border-right: 1px solid #AAAAAA; border-bottom: 1px solid #AAAAAA; font-weight : bold;">
+<div style="text-align:center; background-color: #EBEBEB; border-top: 1px solid #FFFFFF; border-left: 1px solid #FFFFFF; border-right: 1px solid #AAAAAA; border-bottom: 1px solid #AAAAAA; font-weight: bold;">
   <h4><{$message}></h4>
   <p><{$lang_ifnotreload}></p>
 </div>
