@@ -10,15 +10,15 @@
 <body>
   <table cellspacing="0">
     <tr id="header">
-      <td style="width: 150px; background-color: #2F5376; vertical-align: middle; text-align:center;"><a href="<{$xoops_url}>/"><img src="<{$xoops_imageurl}>logo.gif" width="150" alt="" /></a></td>
-      <td style="width: 100%; background-color: #2F5376; vertical-align: middle; text-align:center;">&nbsp;</td>
+      <td style="width: 150px; background-color: #2F5376; vertical-align: middle; text-align:center;"><a href="<{$xoops_url}>/" title="<{$xoops_sitename}>"><img src="<{$xoops_imageurl}>logo.gif" width="150px" alt="<{$xoops_sitename}>" /></a></td>
+      <td style="width: 100%; background-color: #2F5376; vertical-align: middle; text-align:center;"></td>
     </tr>
     <tr>
-      <td style="height: 8px; border-bottom: 1px solid silver; background-color: #dddddd;" colspan="2">&nbsp;</td>
+      <td style="height: 8px; border-bottom: 1px solid silver; background-color: #dddddd;" colspan="2"></td>
     </tr>
   </table>
 
-  <table cellspacing="1" align="center" width="80%" border="0" cellpadding="10px;">
+  <table cellspacing="1px" align="center" width="80%" border="0" cellpadding="10px">
     <tr>
       <td align="center"><div style="background-color: #DDFFDF; color: #136C99; text-align: center; border-top: 1px solid #DDDDFF; border-left: 1px solid #DDDDFF; border-right: 1px solid #AAAAAA; border-bottom: 1px solid #AAAAAA; font-weight: bold; padding: 10px;"><{$lang_siteclosemsg}></div></td>
     </tr>
@@ -36,7 +36,7 @@
         <td style="padding: 2px;"><{$lang_password}></td><td style="padding: 2px;"><input type="password" name="pass" size="12" /></td>
       </tr>
       <tr>
-        <td style="padding: 2px;">&nbsp;</td>
+        <td style="padding: 2px;"></td>
         <td style="padding: 2px;">
         	<input type="hidden" name="xoops_redirect" value="<{$xoops_requesturi}>" />
         	<input type="hidden" name="xoops_login" value="1" />
@@ -47,7 +47,7 @@
 
   <table cellspacing="0" width="100%">
     <tr>
-      <td style="height:8px; border-bottom: 1px solid silver; border-top: 1px solid silver; background-color: #dddddd;" colspan="2">&nbsp;</td>
+      <td style="height:8px; border-bottom: 1px solid silver; border-top: 1px solid silver; background-color: #dddddd;" colspan="2"></td>
     </tr>
   </table>
 
